package com.ventas.dto;

public class ClienteDto extends PersonaDto {
    public int id;
    public String nroCliente;
}