package com.ventas.dto;

import java.util.*;
public class PersonaDto {
    public int personaId;
    public String nombreApellido;
    public String tipoDocumento;
    public String nroDocumento;
    public String CUIT;
    public String condicionAfip;
    public String genero;
    public Date fechaNacimiento;
    public String domicilio;
    public String email;
    public List<String> telefonos;
}