package com.ventas.dto;

import java.util.Date;
public class PrecioDto {
    public int precioId;
    public float monto;
    public Date fecha;
    public int productoId;
}