package com.ventas.dto;

import java.util.Date;
public class StockDto {
    public int stockId;
    public float cantidad;
    public Date fecha;
    public int productoId;
}