package com.ventas.dto;

import java.util.Date;

public class UsuarioDto {
    public int empleadoId;
    public String username;
    public String password;
    public Date ultimoAcceso;
    public EmpleadoDto empleado;
}